deploy: d309fe3089782779ab8ae165036fdc1d442e81ff

--- a/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
@@ -252,18 +252,6 @@
 <div class="paragraph">
 <p><em>Estimated reading time: <strong>4 minutes</strong>.</em></p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -272,7 +260,7 @@ Pending review.
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Which of the following components are either included or required by Red Hat OpenStack Services on OpenShift?</p>
+<p>Which of the following components is either included or required by Red Hat OpenStack Services on OpenShift?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -289,11 +277,11 @@ Pending review.
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Red Hat Virtualization (RHV)<br>
-<em>Incorrect: Red Hat Open Serices on OpenShift does not include and does not support running a control plane on RHV. It also does not support running application workloads on VMs managed by RHV.</em></p>
+<em>Incorrect: Red Hat Open Services on OpenShift do not include and do not support running a control plane on RHV. It also does not support running application workloads on VMs managed by RHV.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Red Hat Ceph Storage</strong><br>
-<em>Correct: Ceph is NOT required but it is optionaly bundled and supported for customers that need a software-defined storage solution.</em></p>
+<em>Correct: Ceph is NOT required but it is optionally bundled and supported for customers that need a software-defined storage solution.</em></p>
 </li>
 </ul>
 </div>
@@ -308,7 +296,7 @@ Pending review.
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Open vSwitch<br>
-<em>Incorrect: vSwitch was used directly in older releases of Red Hat OpenStack plaform but is only used internally by OVN in Red Hat OpenStack Services on OpenShift.</em></p>
+<em>Incorrect: vSwitch was used directly in older releases of the Red Hat OpenStack platform but is only used internally by OVN in Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Linux iptables + nftables<br>
@@ -326,7 +314,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>Where does an OpenStack on OpenShift cluster runs application workloads?</p>
+<p>Where does an OpenStack on OpenShift cluster run application workloads?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -353,28 +341,28 @@ Pending review.
 </div>
 </li>
 <li>
-<p>How does Red Hat OpenStack Services on OpenShift ensures that OpenStack control planes are reliable and scalable?</p>
+<p>How does Red Hat OpenStack Services on OpenShift ensure that OpenStack control planes are reliable and scalable?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> By runnig control plane servers as VMs using a standalone hypervisor such as RHV.<br>
-<em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
+<p><i class="fa fa-square-o"></i> By running control plane servers as VMs using a standalone hypervisor such as RHV.<br>
+<em>Incorrect: This was an option with older releases of the Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> By running control plane servers as systemd services managed by RHEL pacemaker.<br>
-<em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
+<em>Incorrect: This was an option with older releases of the Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> By running control plane servers as podman containers managed by RHEL pacemaker.<br>
-<em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
+<em>Incorrect: This was an option with older releases of the Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> By running control plane servers as VMs using a minimal OpenStack cluster known as undercloud.<br>
-<em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
+<em>Incorrect: This was an option with older releases of the Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> By running control plane servers as VMs on OpenShift Virtualization.<br>
-<em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
+<em>Incorrect: This was an option with older releases of the Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>By running control plane servers as containers on OpenShift.</strong><br>
