--- a/rhoso-intro/1/ch1-intro/s2-components-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -279,7 +267,7 @@ Pending review.
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Which of the following components are either included or required by Red Hat OpenStack Services on OpenShift?</p>
+<p>Which of the following components is either included or required by Red Hat OpenStack Services on OpenShift?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -323,7 +311,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>Where does an OpenStack on OpenShift cluster runs application workloads?</p>
+<p>Where does an OpenStack on OpenShift cluster run application workloads?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -345,11 +333,11 @@ Pending review.
 </div>
 </li>
 <li>
-<p>How does Red Hat OpenStack Services on OpenShift ensures that OpenStack control planes are reliable and scalable?</p>
+<p>How does Red Hat OpenStack Services on OpenShift ensure that OpenStack control planes are reliable and scalable?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> By runnig control plane servers as VMs using a standalone hyperviusor such as RHV.</p>
+<p><i class="fa fa-square-o"></i> By runnig control plane servers as VMs using a standalone hypervisor such as RHV.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> By running control plane servers as systemd services managed by RHEL pacemaker.</p>
