--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
@@ -252,18 +252,6 @@
 <div class="paragraph">
 <p><em>Estimated reading time: <strong>4 minutes</strong>.</em></p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -288,7 +276,7 @@ Pending review.
 <em>Incorrect: Linux System Administrators are more likely to perform tasks inside a VM</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> <strong>Configuring IP routing rules for a virtual networks.</strong><br>
+<p><i class="fa fa-check-square-o"></i> <strong>Configuring IP routing rules for a virtual network.</strong><br>
 <em>Correct: Virtual networks and everything related to them are OpenStack API resources.</em></p>
 </li>
 <li>
@@ -311,7 +299,7 @@ Pending review.
 <em>Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads.</em></p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Creating a new class of virtual server, which provides virtual GPUs.<br>
+<p><i class="fa fa-square-o"></i> Creating a new class of virtual servers, which provides virtual GPUs.<br>
 <em>Incorrect: OpenStack Administrators manage OpenStack resources which potentially affect an entire OpenStack cluster.</em></p>
 </li>
 <li>
@@ -342,7 +330,7 @@ Pending review.
 <em>Incorrect: This task usually belongs to Storage Administrators.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> <strong>Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.</strong><br>
+<p><i class="fa fa-check-square-o"></i> <strong>Installing RPM packages and configuring physical RHEL servers to be managed by OpenStack control planes.</strong><br>
 <em>Correct: OpenStack Administrators could delegate this task to the Server Administration team, but they should be able to perform themselves, and will frequently demand to.</em></p>
 </li>
 <li>
@@ -361,8 +349,8 @@ Pending review.
 <em>Incorrect: typical tasks related to managing application workloads belong to OpenStack Operators, no matter they use the Red Hat product or not.</em></p>
 </li>
 <li>
-<p><i class="fa fa-check-square-o"></i> <strong>Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.</strong><br>
-<em>Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes.</em></p>
+<p><i class="fa fa-check-square-o"></i> <strong>Configuring multiple instances of OpenStack services, one active and another passive, using a pacemaker or another clustering middleware.</strong><br>
+<em>Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded in the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Installing an operating system on compute nodes, such as RHEL.<br>
@@ -370,7 +358,7 @@ Pending review.
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.</strong><br>
-<em>Correct: Red Hat OpenStack users rely on the installation methods embedded the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift.</em></p>
+<em>Correct: Red Hat OpenStack users rely on the installation methods embedded in the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift.</em></p>
 </li>
 </ul>
 </div>
