--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -292,7 +280,7 @@ Pending review.
 <p><i class="fa fa-square-o"></i> Upgrading RHEL to a newer minor release inside a VM.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring IP routing rules for a virtual networks.</p>
+<p><i class="fa fa-square-o"></i> Configuring IP routing rules for a virtual network.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Configuring firewalld rules inside a RHEL VM.</p>
@@ -336,7 +324,7 @@ Pending review.
 <p><i class="fa fa-square-o"></i> Configuring VLANs at the switch fabric to enable compute nodes to connect to those VLANs.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.</p>
+<p><i class="fa fa-square-o"></i> Installing RPM packages and configuring physical RHEL servers to be managed by OpenStack control planes.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Installing OpenStack services on OpenShift clusters.</p>
@@ -352,7 +340,7 @@ Pending review.
 <p><i class="fa fa-square-o"></i> Configuring operating system images to boot new server instance VMs.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.</p>
+<p><i class="fa fa-square-o"></i> Configuring multiple instances of OpenStack services, one active and another passive, using a pacemaker or another clustering middleware.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Installing an operating system on compute nodes, such as RHEL.</p>
