--- a/rhoso-intro/1/ch1-intro/s7-review-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s7-review-quiz-answers.html
@@ -252,18 +252,6 @@
 <div class="paragraph">
 <p><em>Estimated reading time: <strong>5 minutes</strong>.</em></p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -326,7 +314,7 @@ Pending review.
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> False<br>
-<em>Incorrect: OpenStack Administrators cannot manage OpenStack services without access and visibility of their contrainers running on OpenShift.</em></p>
+<em>Incorrect: OpenStack Administrators cannot manage OpenStack services without access and visibility of their containers running on OpenShift.</em></p>
 </li>
 </ul>
 </div>
@@ -341,7 +329,7 @@ Pending review.
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>False</strong><br>
-<em>Correct: Sometimes an OpenStack operator needs to use the OpenStack client or some other tool which provides access to OpenStack APIs not availabe through Horizon.</em></p>
+<em>Correct: Sometimes an OpenStack operator needs to use the OpenStack client or some other tool which provides access to OpenStack APIs not available through Horizon.</em></p>
 </li>
 </ul>
 </div>
