--- a/rhoso-intro/1/ch2-services/s4-additional-quiz.html
+++ b/rhoso-intro/1/ch2-services/s4-additional-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -279,7 +267,7 @@ Pending Review
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Which of the following OpenStack services would be useful for a Customer Relationship Management system (CRM) which stores data in a relational database that runs as another server instance in the same OpenStack cluster?</p>
+<p>Which of the following OpenStack services would be useful for a Customer Relationship Management system (CRM) that stores data in a relational database that runs as another server instance in the same OpenStack cluster?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -307,7 +295,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services would be useful for a mobile Customer Support Management system which provides a scalable REST API layer designed to run more or less server instances according to load from end-users?  The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.</p>
+<p>Which of the following OpenStack services would be useful for a mobile Customer Support Management system that provides a scalable REST API layer designed to run more or less server instances according to load from end-users?  The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -335,7 +323,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scients to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Mathematicians who are not using the platform but rely on desktop applications.</p>
+<p>Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scientists to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Mathematicians who are not using the platform but rely on desktop applications.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
