--- a/rhoso-intro/1/ch2-services/s6-administration-quiz-answers.html
+++ b/rhoso-intro/1/ch2-services/s6-administration-quiz-answers.html
@@ -252,18 +252,6 @@
 <div class="paragraph">
 <p><em>Estimated reading time: <strong>2 minutes</strong>.</em></p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -281,7 +269,7 @@ Pending Review
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Dashboard (Horizon)<br>
-<em>Incorrect: Horizon whould just display resources from the groups (projects and domains) mnanaged by Keystone.</em></p>
+<em>Incorrect: Horizon would just display resources from the groups (projects and domains) managed by Keystone.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Bare Metal Provisioning (Ironic)<br>
@@ -289,7 +277,7 @@ Pending Review
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Metering (Ceilometer)<br>
-<em>Incorrect: The requirements are not about performance metrics and other runtime metric from OpenStack services.</em></p>
+<em>Incorrect: The requirements are not about performance metrics and another runtime metric from OpenStack services.</em></p>
 </li>
 </ul>
 </div>
@@ -300,7 +288,7 @@ Pending Review
 <ul class="checklist">
 <li>
 <p><i class="fa fa-square-o"></i> Identity (Keystone)<br>
-<em>Incorrect: The requirements are not about authentication nor service discovery.</em></p>
+<em>Incorrect: The requirements are not about authentication or service discovery.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Dashboard (Horizon)</strong><br>
@@ -318,12 +306,12 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?</p>
+<p>Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application that requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
 <p><i class="fa fa-square-o"></i> Identity (Keystone)<br>
-<em>Incorrect: The requirements are not about authentication nor service discovery.</em></p>
+<em>Incorrect: The requirements are not about authentication or service discovery.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Dashboard (Horizon)<br>
@@ -335,7 +323,7 @@ Pending Review
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Metering (Ceilometer)<br>
-<em>Incorrect: The requirements are not about performance metrics and other runtime metric from OpenStack services.</em></p>
+<em>Incorrect: The requirements are not about performance metrics and another runtime metric from OpenStack services.</em></p>
 </li>
 </ul>
 </div>
