--- a/rhoso-intro/1/ch2-services/s8-review-quiz.html
+++ b/rhoso-intro/1/ch2-services/s8-review-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -331,7 +319,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>True or False: Though it is common exposing Swift objects to outside an OpenStack cluster, to clients on the Internet, it is <strong>not</strong> common to expose Manila file shares for the same clients.</p>
+<p>True or False: Though it is common to expose Swift objects outside an OpenStack cluster, to clients on the Internet, it is <strong>not</strong> common to expose Manila file shares for the same clients.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -344,7 +332,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>True or False: For most applications, object storage using the S3 API is a drop-in replacement for operating system file access systemcalls.</p>
+<p>True or False: For most applications, object storage using the S3 API is a drop-in replacement for the operating system file access systemcalls.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -357,7 +345,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>True or False: Barbican provides a solution for the common issue of leaking access credentials hardcoded in source code stored in GitHub repositories.</p>
+<p>True or False: Barbican provides a solution for the common issue of leaking access credentials hard coded in source code stored in GitHub repositories.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -396,7 +384,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>True or False: Plamement and Ceilomer may seem to be related, because both track the usage of compute capacity by applications on OpenStack clusters, however, they are actually unrelated and provide different data: Placement is about static usage of resources, like how many virtual CPUs are available for creating more server instances, while Ceilometer is about dynamic usage of resources, like how much CPU is in use right now with multiple simultaneous end-users accessing applications.</p>
+<p>True or False: Placement and Ceilomer may seem to be related, because both track the usage of compute capacity by applications on OpenStack clusters, however, they are actually unrelated and provide different data: Placement is about static usage of resources, like how many virtual CPUs are available for creating more server instances, while Ceilometer is about dynamic usage of resources, like how much CPU is in use right now with multiple simultaneous end-users accessing applications.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
