--- a/rhoso-intro/1/ch1-intro/index.html
+++ b/rhoso-intro/1/ch1-intro/index.html
@@ -255,25 +255,13 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Work in Progress
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This chapter presents the OpenStack open source project and the <strong>Red Hat OpenStack Services on OpenShift</strong> product, so you understand how the current Red Hat OpenStack product is different from community OpenStack and from previous releases of Red Hat OpenStack plaform.</p>
+<p>This chapter presents the OpenStack open source project and the <strong>Red Hat OpenStack Services on OpenShift</strong> product, so you understand how the current Red Hat OpenStack product is different from community OpenStack and previous releases of the Red Hat OpenStack platform.</p>
 </div>
 <div class="paragraph">
 <p>This chapter also introduces two OpenStack user personas: the <strong>OpenStack Operator</strong>, which is the focus of this course, and the OpenStack Administrator, so you understand the scope of work, tooks, and skills required from OpenStack Operators to perform their daily jobs.</p>
