--- a/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
@@ -259,25 +259,13 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_kinds_of_openstack_users"><a class="anchor" href="#_kinds_of_openstack_users"></a>Kinds of OpenStack Users</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The users of an OpenStack cluser are not end-users, they are IT professionals, usually with an operations-focused job role. It is true that application developers sometimes have access to OpenStack clusters and manage their own VMs, but there they are acting as OpenStack Operators.</p>
+<p>The users of an OpenStack cluster are not end-users, they are IT professionals, usually with an operations-focused job role. It is true that application developers sometimes have access to OpenStack clusters and manage their own VMs, but there they are acting as OpenStack Operators.</p>
 </div>
 <div class="paragraph">
 <p>For the purpose of the Red Hat OpenStack training courses, we distinguish between two kinds of OpenStack users:</p>
@@ -300,12 +288,12 @@ Pending review.
 </div>
 </div>
 <div class="paragraph">
-<p>If you are new to OpenStack it&#8217;s recommended that you gain experience as an OpenStack Operator before taking responsibility for OpenStack Administrator tasks. An OpenStack Administrator can also perform, according to needs, the tasks of OpenStack Operators. In fact, OpenStack Admninistrators are typically expected to have all skills and experience of OpenStack Operators.</p>
+<p>If you are new to OpenStack it&#8217;s recommended that you gain experience as an OpenStack Operator before taking responsibility for OpenStack Administrator tasks. An OpenStack Administrator can also perform, according to needs, the tasks of OpenStack Operators. In fact, OpenStack Administrators are typically expected to have all the skills and experience of OpenStack Operators.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_openstack_users_and_other_it_job_roles"><a class="anchor" href="#_openstack_users_and_other_it_job_roles"></a>OpenStack Users and other IT Job Roles</h2>
+<h2 id="_openstack_users_and_other_it_job_roles"><a class="anchor" href="#_openstack_users_and_other_it_job_roles"></a>OpenStack Users and Other IT Job Roles</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Depending on the size of an organization, OpenStack users can either perform other IT roles by themselves or work closely with IT professionals from other roles. For example, an OpenStack Operator may also be the System Administrator who manages the RHEL operating system inside a server instance.</p>
@@ -314,7 +302,7 @@ Pending review.
 <p>As a counter-example, an OpenStack Operator may delegate the configuration of the operating system inside a server instance to a Database Administrator, who is responsible for the database server running inside that server instance. OpenStack Operators usually work closely with DevOps Engineers, Email Administrators, ERP Administrators, and other IT roles focused on application development or application management.</p>
 </div>
 <div class="paragraph">
-<p>Similarly, an OpenStack Administrator may also be an OpenShift Administrator. And as a counter-example, an OpenStack Administrator may work closely with a RHEL Systems Administration team responsible for physical servers in the organizaiton, including compute nodes of an OpenStack cluster. OpenStack Administrators usually work closely with Storage Administrators, Network Administrators, and other IT Operations roles focused on data center infrastructure and platforms.</p>
+<p>Similarly, an OpenStack Administrator may also be an OpenShift Administrator. As a counter-example, an OpenStack Administrator may work closely with a RHEL Systems Administration team responsible for physical servers in the organization, including compute nodes of an OpenStack cluster. OpenStack Administrators usually work closely with Storage Administrators, Network Administrators, and other IT Operations roles focused on data center infrastructure and platforms.</p>
 </div>
 </div>
 </div>
@@ -322,10 +310,10 @@ Pending review.
 <h2 id="_openstack_users_in_large_organizations"><a class="anchor" href="#_openstack_users_in_large_organizations"></a>OpenStack Users in Large Organizations</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In smaller organizations, the same team performs both OpenStack Operator and Administrator roles. In larger organizations, multiple teams of OpenStack Operators might be responsible for different groups workloads running on the same cluster. Conversely, a larger OpenStack Administration team migh split into subteams who manage different availability zones or compute cells of a single cluster.</p>
+<p>In smaller organizations, the same team performs both OpenStack Operator and Administrator roles. In larger organizations, multiple teams of OpenStack Operators might be responsible for different group&#8217;s workloads running on the same cluster. Conversely, a larger OpenStack Administration team might split into subteams that manage different availability zones or compute cells of a single cluster.</p>
 </div>
 <div class="paragraph">
-<p>The scope of work of an OpenStack Operator or Administrator usually includes multiple clusters. It&#8217;s unlikely that an organization will run all their workloads and put all their physical servers in a single OpenStack cluster. More frequently, there will be multiple clusters which run instances (or copies) of the same workloads, to be closer to their end users or for high availability purposes.</p>
+<p>The scope of work of an OpenStack Operator or Administrator usually includes multiple clusters. It&#8217;s unlikely that an organization will run all its workloads and put all its physical servers in a single OpenStack cluster. More frequently, there will be multiple clusters that run instances (or copies) of the same workloads, to be closer to their end users or for high availability purposes.</p>
 </div>
 </div>
 </div>
@@ -333,10 +321,10 @@ Pending review.
 <h2 id="_tools_and_skills_of_openstack_operators"><a class="anchor" href="#_tools_and_skills_of_openstack_operators"></a>Tools and Skills of OpenStack Operators</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>OpenStack Operators focus on OpenStack API resources and typically use the <strong>OpenStack client</strong>, which is a command-line (CLI) tool, and the web interface from <strong>OpenStack Horizon</strong>. The next section of this course provides an introduction to these tools. For now stay focused on the OpenStack user job roles.</p>
+<p>OpenStack Operators focus on OpenStack API resources and typically use the <strong>OpenStack client</strong>, which is a command-line (CLI) tool, and the web interface from <strong>OpenStack Horizon</strong>. The next section of this course provides an introduction to these tools. For now, stay focused on the OpenStack user job roles.</p>
 </div>
 <div class="paragraph">
-<p>The OpenStack client, Horizon, and any other tools available from the open source community or IT vendor to manage OpenStack clusters and workloads rely on the same OpenStack APIs. There are no "backdoors", no "native" nor "low-level" ways of managing OpenStack clusters.</p>
+<p>The OpenStack client, Horizon, and any other tools available from the open source community or IT vendor to manage OpenStack clusters and workloads rely on the same OpenStack APIs. There are no "backdoors", no "native" or "low-level" ways of managing OpenStack clusters.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -350,7 +338,7 @@ Pending review.
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster nodes, and replace them with an icon which represents the OpenShift services and, implicitly, their OpenShift cluster.
+The OpenStack cluster diagrams, from now on, will omit the OpenShift cluster nodes, and replace them with an icon that represents the OpenShift services and, implicitly, their OpenShift cluster.
 </td>
 </tr>
 </table>
@@ -367,7 +355,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 <h2 id="_tools_and_skills_of_openstack_administrators"><a class="anchor" href="#_tools_and_skills_of_openstack_administrators"></a>Tools and Skills of OpenStack Administrators</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>OpenStack Administrators have a split focus among OpenStack APIs, Kubernetes APIs, Linux, and Ansible. They perform some tasks using the OpenStack client and Horizon, but for other tasks they must use the OpenShift tools. And, because an OpenStack control plane uses Ansible playbooks to manage OpenStack compute nodes running RHEL, OpenStack Administrators also need skills of RHEL system administration using Ansible.</p>
+<p>OpenStack Administrators have a split focus among OpenStack APIs, Kubernetes APIs, Linux, and Ansible. They perform some tasks using the OpenStack client and Horizon, but for other tasks, they must use the OpenShift tools. And, because an OpenStack control plane uses Ansible playbooks to manage OpenStack compute nodes running RHEL, OpenStack Administrators also need skills in RHEL system administration using Ansible.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -375,7 +363,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 </div>
 </div>
 <div class="paragraph">
-<p>For simplicity, the previous figure ommits the tools OpenStack Administrators use to interact with Kubernetes APIs and OpenShift clusters, such as:</p>
+<p>For simplicity, the previous figure omits the tools OpenStack Administrators use to interact with Kubernetes APIs and OpenShift clusters, such as:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -383,7 +371,7 @@ The OpenStack cluster diagrams, from now on, will ommit the OpenShift cluster no
 <p>The OpenShift CLI and the OpenShift web console for managing containers (including the containers from OpenStack).</p>
 </li>
 <li>
-<p>The Operator Lifecycle Manager (OLM), for installing applications and optional features of Red Hat OpenShift, packaged as add-on operators.</p>
+<p>The Operator Lifecycle Manager (OLM), for installing applications and optional features of Red Hat OpenShift, is packaged as add-on operators.</p>
 </li>
 </ul>
 </div>
@@ -403,10 +391,10 @@ In OpenShift, the term "operator" sometimes refers to a software component, inst
 </table>
 </div>
 <div class="paragraph">
-<p>OpenStack Administrators absolutely require skills about OpenShift, containers, and Kubernetes. They need those skills to install, configure, and troubleshoot OpenStack Services on OpenShift and also to manage OpenStack infrastructure services that are not user-facing and not acessible through OpenStack APIs.</p>
+<p>OpenStack Administrators absolutely require skills in OpenShift, containers, and Kubernetes. They need those skills to install, configure, and troubleshoot OpenStack Services on OpenShift and also to manage OpenStack infrastructure services that are not user-facing and not accessible through OpenStack APIs.</p>
 </div>
 <div class="paragraph">
-<p>OpenStack administrators are discouraged from manually managing compute nodes using SSH sessions. Instead they should use Ansible as managed by OpenStack. Occasionally, OpenStack Administrators open SSH sessions directly to compute nodes for troubleshooting purposes.</p>
+<p>OpenStack administrators are discouraged from manually managing compute nodes using SSH sessions. Instead, they should use Ansible as managed by OpenStack. Occasionally, OpenStack Administrators open SSH sessions directly to compute nodes for troubleshooting purposes.</p>
 </div>
 </div>
 </div>
@@ -414,7 +402,7 @@ In OpenShift, the term "operator" sometimes refers to a software component, inst
 <h2 id="_automation_for_openstack_operations_tasks"><a class="anchor" href="#_automation_for_openstack_operations_tasks"></a>Automation for OpenStack Operations Tasks</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Nowadays all IT roles require automation, either using traditional scripting, modern infrastructure-as-code, or even newer AI-enabled tools. Whatever the tool, if their purpose is automating the management of applications running on OpenStack, it is automating the same tasks a human OpenStack Operator would perform, and those tools must use the same OpenStack APIs.</p>
+<p>Nowadays all IT roles require automation, either using traditional scripting, modern infrastructure-as-code, or even newer AI-enabled tools. Whatever the tool, if its purpose is automating the management of applications running on OpenStack, it is automating the same tasks a human OpenStack Operator would perform, and those tools must use the same OpenStack APIs.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -422,7 +410,7 @@ In OpenShift, the term "operator" sometimes refers to a software component, inst
 </div>
 </div>
 <div class="paragraph">
-<p>Nothing prevents automation tools from running inside an OpenStack cluster. The OpenStack service named Heat, which is included with Red Hat OpenStack Services on OpenShift, is one of such tools. Most tools, for example CI/CD managers, and infrastructure automation such as Ansible, can run either outside or inside an OpenStack cluster. And, if they run inside a cluster, nothing prevents them from managing other clusters.</p>
+<p>Nothing prevents automation tools from running inside an OpenStack cluster. The OpenStack service named Heat, which is included with Red Hat OpenStack Services on OpenShift, is one of such tools. Most tools, for example, CI/CD managers, and infrastructure automation such as Ansible, can run either outside or inside an OpenStack cluster. And, if they run inside a cluster, nothing prevents them from managing other clusters.</p>
 </div>
 <div class="paragraph">
 <p>Automation tools can also run in Kubernetes, as containers. In fact, the ability to use tools already included with Red Hat OpenShift, such as OpenShift Pipelines, is another advantage of running OpenStack control planes on OpenShift, opening the possibility of managing all applications used to support IT infrastructure using the same set of Kubernetes primitives and workflows.</p>
