--- a/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s5-ui-lecture.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -283,7 +271,7 @@ Pending review.
 <dl>
 <dt class="hdlist1">The OpenStack Client</dt>
 <dd>
-<p>It is a command-line tool which provides a thin layer on the APIs of multiple OpenStack services. As a single client for multiple services, it might include commands for services that are not supported by Red Hat OpenStack or which are not enabled in a particular cluster.</p>
+<p>It is a command-line tool that provides a thin layer on the APIs of multiple OpenStack services. As a single client for multiple services, it might include commands for services that are not supported by Red Hat OpenStack or that are not enabled in a particular cluster.</p>
 </dd>
 <dt class="hdlist1">The Horizon Dashboard</dt>
 <dd>
@@ -292,7 +280,7 @@ Pending review.
 </dl>
 </div>
 <div class="paragraph">
-<p>Despite the rich features of the Hozizon web UI, it is expected than an OpenStack Operator is comfortable using an operating system prompt, most likely a Bash shell from Linux. There are tasks which absolutely require using the OpenStack client and Horizon is not designed to be a full-service tool for Operations and Administrators, but focus on most frequent  tasks and on workflows where graphical user interfaces can provide significant advantages over CLI workflows.</p>
+<p>Despite the rich features of the Horizon web UI, it is expected that an OpenStack Operator is comfortable using an operating system prompt, most likely a Bash shell from Linux. There are tasks that absolutely require using the OpenStack client and Horizon is not designed to be a full-service tool for Operations and Administrators, but focuses on the most frequent  tasks and on workflows where graphical user interfaces can provide significant advantages over CLI workflows.</p>
 </div>
 </div>
 </div>
@@ -334,10 +322,10 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 </table>
 </div>
 <div class="paragraph">
-<p>Most OpenStack services manage multiple types of resources and the name of a resource type can be composed by multiple words, separated by spaces, which is something a Linux sysadministrator is not used to.</p>
+<p>Most OpenStack services manage multiple types of resources and the name of a resource type can be composed of multiple words, separated by spaces, which is something a Linux sysadministrator is not used to.</p>
 </div>
 <div class="paragraph">
-<p>The following are some of the resource types recognized by the OpenStack client. Later in the learning journey you will learn what these resource types represent and which actions you can perform on them:</p>
+<p>The following are some of the resource types recognized by the OpenStack client. Later in the learning journey, you will learn what these resource types represent and which actions you can perform on them:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -368,7 +356,7 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 <p>An <em>action</em> corresponds to an OpenStack API performed on the <em>resource</em> and it can take many optional or required <em>arguments</em>.</p>
 </div>
 <div class="paragraph">
-<p>The OpenStack client defines the meaning of some standard actions to enforce consistency among multiple services and their resources. The following are some of the standard actions, but not all resource types will accept all standard actions. Later during this learning journey you will learn what each action means:</p>
+<p>The OpenStack client defines the meaning of some standard actions to enforce consistency among multiple services and their resources. The following are some of the standard actions, but not all resource types will accept all standard actions. Later during this learning journey, you will learn what each action means:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -396,7 +384,7 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 </ul>
 </div>
 <div class="paragraph">
-<p>The previous list might seem that all or most actions are single words, but any resource can define a non-standard action composed of multiple words. Besides, single-word actions are usually extended with a resource type to produce a multiple-words action, for example:</p>
+<p>The previous list might seem that all or most actions are single words, but any resource can define a non-standard action composed of multiple words. Besides, single-word actions are usually extended with a resource type to produce a multiple-word action, for example:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -412,7 +400,7 @@ In this learning journey, we prefer the term "resource" over "object" to avoid c
 <p>The <em>arguments</em> to an <em>action</em> can be resource names, resource identifiers, or command-line options using the <a href="https://www.man7.org/linux/man-pages/man1/getopt.1.html">GNU GetOps</a> conventions. When there are multiple arguments, order does not matter, but the value of a command-line option must follow its option, separated by either a space or an equals sign (=).</p>
 </div>
 <div class="paragraph">
-<p>The <em>global options</em> look like arguments, because they also follow standard GNU Getops conventions, but they have the same meaning for all resources and actions. They usually set authentication and loggin parameters.</p>
+<p>The <em>global options</em> look like arguments, because they also follow standard GNU Getops conventions, but they have the same meaning for all resources and actions. They usually set authentication and login parameters.</p>
 </div>
 <div class="sect2">
 <h3 id="_openstack_client_command_examples"><a class="anchor" href="#_openstack_client_command_examples"></a>OpenStack Client Command Examples</h3>
@@ -465,7 +453,7 @@ $ <strong>openstack volume set <em>appdisk</em> --bootable --readonly</strong></
 <p>Most of the times, the order of arguments make no difference. We recommend that you put resource names first, and other arguments later, because this makes it easier to use the command-line history of your operating system command shell to change previous commands, for example changing a <code>create</code> to a <code>show</code> command.</p>
 </div>
 <div class="paragraph">
-<p>But, if you prefer the tradditional GNU style of typing all options first and non-option arguments later, you could rewrite the latest two examples as:</p>
+<p>But, if you prefer the traditional GNU style of typing all options first and non-option arguments later, you could rewrite the latest two examples as:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -502,10 +490,10 @@ $ <strong>openstack volume set --readonly --bootable <em>appdisk</em></strong></
 <h2 id="_using_the_horizon_dashboard"><a class="anchor" href="#_using_the_horizon_dashboard"></a>Using the Horizon Dashboard</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The <a href="https://docs.openstack.org/horizon/2024.1/user/">OpenStack Horizon</a> project provides a dashboard for cloud end users, that is, OpenStack Operators, to manage application resources such as server instances, networks, and volumes. It also enables a few OpenStack Administrator tasks which you will learn in more details on the courses of the OpenStack administration learning journey.</p>
+<p>The <a href="https://docs.openstack.org/horizon/2024.1/user/">OpenStack Horizon</a> project provides a dashboard for cloud end users, that is, OpenStack Operators, to manage application resources such as server instances, networks, and volumes. It also enables a few OpenStack Administrator tasks which you will learn in more detail on the courses of the OpenStack administration learning journey.</p>
 </div>
 <div class="paragraph">
-<p>Because Horizon is an OpenStack service, it is typically enabled as part of OpenStack cluster provisioning and is immediatelly available for remote access, without the need to install nor configure anything on the OpenStack Operator workstation.</p>
+<p>Because Horizon is an OpenStack service, it is typically enabled as part of OpenStack cluster provisioning and is immediately available for remote access, without the need to install nor configure anything on the OpenStack Operator workstation.</p>
 </div>
 <div class="sect2">
 <h3 id="_navigating_the_horizon_web_interface"><a class="anchor" href="#_navigating_the_horizon_web_interface"></a>Navigating the Horizon Web Interface</h3>
@@ -516,16 +504,16 @@ $ <strong>openstack volume set --readonly --bootable <em>appdisk</em></strong></
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-This section may need extensive rewrite and new screen shots because of changes in the look and feel and layout of Horizon between RHOSP 16 and RHOSO 18.
+This section may need extensive rewrites and new screenshots because of changes in the look and feel and layout of Horizon between RHOSP 16 and RHOSO 18.
 </td>
 </tr>
 </table>
 </div>
 <div class="paragraph">
-<p>The Horizon web UI consists of two rows of menus at the top, and a third row with tabs which depend on the last menu item that was selected. The remaining of web page is dedicated to display information from the current tab.</p>
+<p>The Horizon web UI consists of two rows of menus at the top, and a third row with tabs that depend on the last menu item that was selected. The remaining web page is dedicated to displaying information from the current tab.</p>
 </div>
 <div class="paragraph">
-<p>The following figure shows an example of the Horizon dashboard for an OpenStack Operator user, displaying the <strong>Project / Compute / Overview</strong> page. The path starts with the selection of the topmost row (<strong>Project</strong>), them the selection of the second row, from top to bottom (<strong>Compute</strong>), and finally the tab on the third row (<strong>Overview</strong>).</p>
+<p>The following figure shows an example of the Horizon dashboard for an OpenStack Operator user, displaying the <strong>Project / Compute / Overview</strong> page. The path starts with the selection of the topmost row (<strong>Project</strong>), then the selection of the second row, from top to bottom (<strong>Compute</strong>), and finally the tab on the third row (<strong>Overview</strong>).</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -533,10 +521,10 @@ This section may need extensive rewrite and new screen shots because of changes 
 </div>
 </div>
 <div class="paragraph">
-<p>Most menu items in the second row relate groups of resource types managed by OpenStack services: <strong>Compute</strong>, <strong>Volumes</strong> (storage), <strong>Network</strong>, and so on; and most items in the third row are individual resource types from those groups, for example: from <strong>Network</strong>, you see <strong>Networks</strong>, <strong>Routers</strong>, and <strong>Load balancers</strong>, among other items.</p>
+<p>Most menu items in the second row relate to groups of resource types managed by OpenStack services: <strong>Compute</strong>, <strong>Volumes</strong> (storage), <strong>Network</strong>, and so on; and most items in the third row are individual resource types from those groups, for example: from <strong>Network</strong>, you see <strong>Networks</strong>, <strong>Routers</strong>, and <strong>Load balancers</strong>, among other items.</p>
 </div>
 <div class="paragraph">
-<p>In the topmost row, to the right, you can select either <strong>Project</strong> or <strong>Identity</strong> and the menu on the second row changes accordinly. The first item to the left of the second row reflects the selection of the first or topmost row, so it&#8217;ll be either <strong>Project</strong> or <strong>Identity</strong> also. The following figure shows how the second row changes after you select <strong>Identity</strong> and enters the <strong>Identity / Projects</strong> page.</p>
+<p>In the topmost row, to the right, you can select either <strong>Project</strong> or <strong>Identity</strong>, and the menu on the second-row changes accordingly. The first item to the left of the second row reflects the selection of the first or topmost row, so it&#8217;ll be either <strong>Project</strong> or <strong>Identity</strong>. The following figure shows how the second-row changes after you select <strong>Identity</strong> and enter the <strong>Identity / Projects</strong> page.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -544,7 +532,7 @@ This section may need extensive rewrite and new screen shots because of changes 
 </div>
 </div>
 <div class="paragraph">
-<p>OpenStack operators spend most of their time on the <strong>Project</strong> topmost menu. They only select <strong>Identity</strong> when they need to manage access to OpenStack resources and applications to other operators and application administrators.</p>
+<p>OpenStack operators spend most of their time on the <strong>Project&#8217;s</strong> topmost menu. They only select <strong>Identity</strong> when they need to manage access to OpenStack resources and applications to other operators and application administrators.</p>
 </div>
 <div class="paragraph">
 <p>To the right, there&#8217;s another menu item named <strong>Project</strong>, also in the topmost row. This menu enables switching between multiple OpenStack projects a user may have access to. Switching projects brings you back to the <strong>Project / Compute / Overview</strong> page. The following figure displays two projects to which the OpenStack Operator user has access to.</p>
@@ -558,7 +546,7 @@ This section may need extensive rewrite and new screen shots because of changes 
 <p>The item <strong>Help</strong> to the topmost right opens another browser window on the OpenStack community docs&#8201;&#8212;&#8201;not the Red Hat OpenStack product documentation!</p>
 </div>
 <div class="paragraph">
-<p>Finally, the item to the top left with the user name ("developer1" in the previous figure) enables Signing out of Horizon and loging in as a different OpenStack user.</p>
+<p>Finally, the item to the top left with the user name ("developer1" in the previous figure) enables Signing out of Horizon and logging in as a different OpenStack user.</p>
 </div>
 <div class="paragraph">
 <p>Notice that each menu item on the second row, except for the currently selected one, displays a down arrow (or a letter "v") to signal it displays a pull-down menu. Each item on the pull-down menu is a tab of that menu item, so you can quickly switch to different pages with fewer mouse clicks. The following figure shows, as an example, the <strong>Project / Network / Networks</strong> page with the pull-down menu from <strong>Projects</strong>. Notice that the <strong>Networks</strong> tab itself is hidden behind the pull-down menu.</p>
@@ -577,7 +565,7 @@ This section may need extensive rewrite and new screen shots because of changes 
 </div>
 </div>
 <div class="paragraph">
-<p>Those new tabs and pages enable managing OpenStack API resources which require elevated privileges, to which OpenStack Operators usually have no access, and that can impact the entire cluster, as opposed to resources which belong to one application or workload.</p>
+<p>Those new tabs and pages enable managing OpenStack API resources which require elevated privileges, to which OpenStack Operators usually have no access, and that can impact the entire cluster, as opposed to resources that belong to one application or workload.</p>
 </div>
 </div>
 <div class="sect2">
@@ -586,13 +574,13 @@ This section may need extensive rewrite and new screen shots because of changes 
 <p>You already know that the Horizon dashboard does not provide access to all OpenStack resources and their APIs. There are tasks, for both Operators and Administrators, which may require using the OpenStack client or may be easier to perform using it.</p>
 </div>
 <div class="paragraph">
-<p>Becoming proefficient in the OpenStack client also enables usage of automation tools, such as CI/CD pipelines and issue tracking systems. The OpenStack client can also access OpenStack&#8217;s own automation tool, the Heat service, which we will be introduced to you in the next chapter of this course.</p>
+<p>Becoming proficient in the OpenStack client also enables the usage of automation tools, such as CI/CD pipelines and issue-tracking systems. The OpenStack client can also access OpenStack&#8217;s own automation tool, the Heat service, which we will introduce to you in the next chapter of this course.</p>
 </div>
 <div class="paragraph">
-<p>Horizon is easier for beginner Operators because they can see all arguments to an API call in the same page, or in related pages of a multiple-form workflow.  Horizon may provide defaults, or show the available alternatives, which would require addtional commands using the CLI.</p>
+<p>Horizon is easier for beginner Operators because they can see all arguments to an API call on the same page, or in related pages of a multiple-form workflow.  Horizon may provide defaults, or show the available alternatives, which would require additional commands using the CLI.</p>
 </div>
 <div class="paragraph">
-<p>Horizon can also group multiple resources, sometimes from different services, in the same page, providing workflows that tend to require less steps and can be easier to understand than equivalent workflows using the OpenStack client.</p>
+<p>Horizon can also group multiple resources, sometimes from different services, on the same page, providing workflows that tend to require less steps and can be easier to understand than equivalent workflows using the OpenStack client.</p>
 </div>
 <div class="paragraph">
 <p>Some Horizon pages provide a summary view of information from multiple resources that would be very hard to collect and display using CLI tools, for example the <strong>Project / Compute / Overview</strong> page from the first figure, or the <strong>Project / Network / Topology</strong> page of the following figure. Those pages make Horizon more than just a web interface to OpenStack API resources, but a true dashboard of information for OpenStack Operators.</p>
