--- a/rhoso-intro/1/ch1-intro/s7-review-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s7-review-quiz.html
@@ -249,7 +249,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><em>Estimated reading time: <strong>1 minutes</strong>.</em></p>
+<p><em>Estimated reading time: <strong>1 minute</strong>.</em></p>
 </div>
 <div class="dlist">
 <dl>
@@ -258,18 +258,6 @@
 <p>Assess the learner&#8217;s understanding of the scope of OpenStack operations with Red Hat OpenStack on OpenShift.</p>
 </dd>
 </dl>
-</div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending review.
-</td>
-</tr>
-</table>
 </div>
 </div>
 </div>
@@ -305,7 +293,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>True of False: An OpenStack Operator needs access to RHEL compute nodes to manage application VMs running on those nodes.</p>
+<p>True or False: An OpenStack Operator needs access to RHEL compute nodes to manage application VMs running on those nodes.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -344,7 +332,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>An OpenStack Operator focuses on OpenStack API resources that affect individual application workloads, as opposed to OpenStack API resources which affect an entire cluster.</p>
+<p>An OpenStack Operator focuses on OpenStack API resources that affect individual application workloads, as opposed to OpenStack API resources that affect an entire cluster.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
