--- a/rhoso-intro/1/ch2-services/index.html
+++ b/rhoso-intro/1/ch2-services/index.html
@@ -255,28 +255,16 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Work in Progress
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This chapter introduces the OpenStack services that are included and supported with Red Hat OpenStack Services on OpenShift. It focuses on the services that OpenStack Operators interacts with to perform their daily jobs and how those services work together to enable different kinds of application workloads.</p>
+<p>This chapter introduces the OpenStack services that are included and supported with Red Hat OpenStack Services on OpenShift. It focuses on the services that OpenStack Operators interact with to perform their daily jobs and how those services work together to enable different kinds of application workloads.</p>
 </div>
 <div class="paragraph">
-<p>This chapter starts with the fundamental services that OpenStack operators use to manage application workloads; it continues with additional services which enable scalabity, resilience, and automation of cloud-native workloads; and finishes with services intended to support managing OpenStack clusters themselves.</p>
+<p>This chapter starts with the fundamental services that OpenStack operators use to manage application workloads; it continues with additional services which enable scalability, resilience, and automation of cloud-native workloads; and finishes with services intended to support managing OpenStack clusters themselves.</p>
 </div>
 </div>
 </div>
