--- a/rhoso-intro/1/ch2-services/s2-fundamental-quiz-answers.html
+++ b/rhoso-intro/1/ch2-services/s2-fundamental-quiz-answers.html
@@ -252,18 +252,6 @@
 <div class="paragraph">
 <p><em>Estimated reading time: <strong>3 minutes</strong>.</em></p>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -277,7 +265,7 @@ Pending Review
 <ul class="checklist">
 <li>
 <p><i class="fa fa-square-o"></i> Identity (Keystone)<br>
-<em>Incorrect: The applicaiton and its VM do not need to authenticate to nor discover OpenStack services. Only you (the Operator) user has this need.</em></p>
+<em>Incorrect: The application and its VM do not need to authenticate to nor discover OpenStack services. Only you (the Operator) user has this need.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Compute (Nova)</strong><br>
@@ -285,7 +273,7 @@ Pending Review
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Block Storage (Cinder)<br>
-<em>Incorrect: The requirements tell nothing about the need to store data longer than the life of the VM or about the need to preserve data in case of failures.</em></p>
+<em>Incorrect: The requirements tell nothing about the need to store data longer than the life of the VM or for the need to preserve data in case of failures.</em></p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Networking (Neutron)<br>
@@ -339,11 +327,11 @@ Pending Review
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Block Storage (Cinder)<br>
-<em>Incorrect: The requirements do not state where and how the web application stores its data. If all data from the application is stored in a database, running in another VM, then the application VM could be easily recreated from its Glance image. But ask about possible requirements about long-term storage of logs and how the application handles it. You might need Cinder for that.</em></p>
+<em>Incorrect: The requirements do not state where and how the web application stores its data. If all data from the application is stored in a database, running in another VM, then the application VM could be easily recreated from its Glance image. But ask about possible requirements for long-term storage of logs and how the application handles it. You might need Cinder for that.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Networking (Neutron)</strong><br>
-<em>Correct: It is a web application, it requires network conectivity from web browsers on end-user computers or smartphones.</em></p>
+<em>Correct: It is a web application, that requires network connectivity from web browsers on end-user computers or smartphones.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Image (Glance)</strong><br>
@@ -353,7 +341,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services are required by a monitoring application which collects performance metrics from OpenStack clusters, services, and compute nodes? The history of metrics and alerts, stored on the applicaiton VM, must be persistent because it will be input to capacity planning.</p>
+<p>Which of the following OpenStack services are required by a monitoring application that collects performance metrics from OpenStack clusters, services, and compute nodes? The history of metrics and alerts, stored on the application VM, must be persistent because it will be input to capacity planning.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
