--- a/rhoso-intro/1/ch2-services/s2-fundamental-quiz.html
+++ b/rhoso-intro/1/ch2-services/s2-fundamental-quiz.html
@@ -259,18 +259,6 @@
 </dd>
 </dl>
 </div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review
-</td>
-</tr>
-</table>
-</div>
 </div>
 </div>
 <div class="sect1">
@@ -345,7 +333,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services are required by a monitoring application which collects performance metrics from OpenStack clusters, services, and compute nodes?</p>
+<p>Which of the following OpenStack services are required by a monitoring application that collects performance metrics from OpenStack clusters, services, and compute nodes?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
