--- a/rhoso-intro/1/ch2-services/s6-administration-quiz.html
+++ b/rhoso-intro/1/ch2-services/s6-administration-quiz.html
@@ -249,7 +249,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><em>Estimated reading time: <strong>1 minutes</strong>.</em></p>
+<p><em>Estimated reading time: <strong>1 minute</strong>.</em></p>
 </div>
 <div class="dlist">
 <dl>
@@ -258,18 +258,6 @@
 <p>Assess the learner’s understanding of the purpose and utility of the OpenStack administration services.</p>
 </dd>
 </dl>
-</div>
-<div class="admonitionblock warning">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-warning" title="Warning"></i>
-</td>
-<td class="content">
-Pending Review
-</td>
-</tr>
-</table>
 </div>
 </div>
 </div>
@@ -317,7 +305,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?</p>
+<p>Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application that requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
